1.1
===

Renamed functions:

 - wait_for_occupied_port: occupied
 - wait_for_free_port: free

The original names are kept as aliases for now.

1.0
===

Initial release based on utilities in CherryPy 3.5.